# genesis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml
genesis-analytics/: Cargo.toml
genesis-analytics/assets/: user.ndjson  user.parquet
genesis-analytics/benches/: benchmark.rs
genesis-analytics/examples/: base.rs  parquet.rs  repl.rs
genesis-api/: Cargo.toml  build.rs
genesis-api/proto/: stat.proto  types.proto
genesis-api/proto/auth/: auth.proto
genesis-api/proto/metrics/: metrics.proto
genesis-api/proto/stream/: stream.proto
genesis-api/src/: client.rs  server.rs
genesis-api/src/proto/: auth.rs  metrics.rs  mod.rs  stat.rs  stream.rs  types.rs
genesis-common/: Cargo.toml
genesis-common/src/: em.rs  eventhub.rs  lib.rs
genesis-common/src/config/: defaults.rs  mod.rs  target.rs
genesis-common/src/convert/: mod.rs
genesis-common/src/repo/: mod.rs  sea_repo.rs
genesis-common/src/types/: mod.rs
genesis-cross/: Cargo.toml
genesis-cross/src/js/: bundle.rs  compile.rs  mod.rs
genesis-crypto/: Cargo.toml
genesis-crypto/src/: argon.rs  base64.rs  blake3.rs  ed25519.rs  lib.rs
genesis-macros/: Cargo.toml
genesis-macros/examples/: auto_debug.rs  auto_deref.rs  chat.rs  enum_from.rs  enum_from_darling.rs  mini_nginx.rs  my_try.rs  my_vec.rs
genesis-macros/src/: auto.rs  enum_darling.rs  enum_from.rs  lib.rs
genesis-process/: Cargo.toml
genesis-process/src/: error.rs  instruct.rs  lib.rs  pipe.rs  process.rs  recording.rs  ssh.rs  types.rs
genesis-process/src/common/: string.rs
genesis-process/src/guacamole/: constants.rs  mod.rs  process.rs
genesis-process/src/sshm/: channel.rs  mod.rs  pipe.rs  process.rs
genesis-ssh/: Cargo.toml
genesis-ssh/src/: common.rs  lib.rs
genesis-ssh/src/client/: channel_session.rs  error.rs  handler.rs  mod.rs
genesis-web/: Cargo.toml
genesis-web/examples/: cancel.rs
genesis-web/src/: error.rs  lib.rs  main.rs
genesis-web/src/adapter/: mod.rs
genesis-web/src/adapter/cqe/: mod.rs
genesis-web/src/adapter/cqe/cmd/: asset.rs  credential.rs  guacamole.rs  instruct.rs  mod.rs  node.rs  ssh.rs  user.rs
genesis-web/src/adapter/cqe/query/: asset.rs  credential.rs  execute.rs  instruct.rs  mod.rs  node.rs
genesis-web/src/adapter/cqe/vo/: asset.rs  credential.rs  execute.rs  instruct.rs  mod.rs  node.rs  user.rs
genesis-web/src/adapter/http/: mod.rs
genesis-web/src/adapter/http/handlers/: asset_handler.rs  credential_handler.rs  execute_handler.rs  file_handler.rs  guacamole_handler.rs  instruct.rs  instruct_handler.rs  mod.rs  node_handler.rs  ssh_handler.rs  user_handler.rs
genesis-web/src/adapter/http/middleware/: auth.rs  mod.rs  request_id.rs  server_time.rs
genesis-web/src/adapter/http/routers/: axum_router.rs
genesis-web/src/adapter/http/server/: axum_server.rs  mod.rs
genesis-web/src/cmd/: mod.rs
genesis-web/src/common/: em.rs  mod.rs  param.rs  session.rs  types.rs
genesis-web/src/config/: alias.rs  mod.rs
genesis-web/src/repo/: mod.rs
genesis-web/src/repo/model/: asset.rs  credential.rs  execute.rs  instruct.rs  mod.rs  node.rs  protocol.rs  user.rs
genesis-web/src/repo/sea/: asset.rs  builder.rs  credential.rs  execute.rs  instruct.rs  mod.rs  node.rs  protocol.rs  user.rs
genesis-web/src/service/: guacamole.rs  mod.rs
genesis-web/src/util/: jwt.rs
mk/sql/: init.sql
