[workspace]
resolver = "2"
members = [
    "genesis-common", "genesis-crypto", "genesis-crypto",
    "genesis-process", "genesis-ssh", "genesis-web", "genesis-macros"
, "genesis-api"]

[workspace.dependencies]
toml = "0.8.19"
uuid = "1.11.0"
anyhow = "1.0.91"
serde = "1.0.214"
serde_json = "1.0.132"
strum = "0.26.3"
thiserror = "2.0.4"
chrono = "0.4.38"
dashmap = "6.1.0"
once_cell = "1.21.3"
async-trait = "0.1.83"
futures-util = "0.3.31"
lazy_static = "1.5.0"
futures = "0.3.31"
tokio = "1.41.0"
tokio-util = "0.7.13"
tokio-console = "0.1.13"

darling = "0.21.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["extra-traits"] }

tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
