[package]
name = "genesis-analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
planus = "=1.1.1"
arrow = { version = "56.1.0", features = ["prettyprint"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
parquet = "56.1.0"
datafusion = { version = "49.0.2", features = ["serde"] }
polars = { version = "0.50.0", features = ["parquet", "timezones", "sql", "lazy"] }
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros"] }
clap = { workspace = true, features = ["derive"] }
reedline-repl-rs = { version = "1.2.1", features = ["async", "derive", "async_derive"] }
enum_dispatch = "0.3.13"
