[package]
name = "genesis-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
