[package]
name = "genesis-cross"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
colored = "3.0.0"
enum_dispatch = "0.3.13"
lazy_static.workspace = true
path-absolutize = "3.1.1"
regex = "1.11.2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
swc_atoms = "7.0.0"
swc_bundler = "30.0.0"
swc_common = { version = "14.0.3", features = ["tty-emitter", "sourcemap"] }
swc_ecma_ast = "15.0.0"
swc_ecma_codegen = "17.0.0"
swc_ecma_loader = "14.0.0"
swc_ecma_parser = "23.0.0"
swc_ecma_transforms_base = "25.0.0"
swc_ecma_transforms_react = "28.0.0"
swc_ecma_transforms_typescript = "28.0.0"
url = "2.5.7"
