[package]
name = "genesis-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dev-dependencies]
anyhow = "1.0.98"
[dependencies]
darling = { workspace = true }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
dashmap.workspace = true
futures.workspace = true
tokio-console.workspace = true
console-subscriber = "0.4.1"
