[package]
name = "genesis-process"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
[dependencies]
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["tracing", "signal", "io-std"] }
bytes = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }

vt100 = "0.16.2"
validator = { version = "0.20.0", features = ["derive"] }
[dependencies.genesis-ssh]
path = "../genesis-ssh"

[dependencies.genesis-common]
path = "../genesis-common"
