[package]
name = "genesis-ssh"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.91"
bytes = "1.8.0"
russh = "0.46.0"
tokio = {version="1.41.0", features = ["tracing", "signal","io-std"]}
tracing = "0.1.40"
uuid = "1.11.0"

genesis-common = { version = "*", path = "../genesis-common" }
thiserror = "1.0.68"
futures = "0.3.31"
async-trait = "0.1.83"
tracing-subscriber = "0.3.18"
