[package]
name = "genesis-ssh"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
russh = "0.54.3"
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true, features = ["tracing", "signal", "io-std", "bytes"] }
genesis-common = { version = "*", path = "../genesis-common" }
