[package]
name = "genesis-web"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
[dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["ws"] }
clap = { version = "4.5.20", features = ["derive"] }
futures-util = "0.3.31"
lazy_static = "1.5.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.11.0"
vt100 = "0.15.2"

[dependencies.genesis-ssh]
path="../genesis-ssh"

[dependencies.genesis-common]
path="../genesis-common"
