[package]
name = "genesis-web"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
[dependencies]
jsonwebtoken = "9.3.0"
axum = { version = "0.7.7", features = ["ws", "macros"] }
clap = { version = "4.5.20", features = ["derive"] }
validator = { version = "0.19.0", features = ["derive"] }
sea-orm = { version = "1.1.7", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-mysql", "sqlx-sqlite"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["io"] }

anyhow.workspace = true
futures-util.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
dashmap.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tower = "0.5.2"
[dependencies.genesis-ssh]
path = "../genesis-ssh"

[dependencies.genesis-common]
path = "../genesis-common"

[dependencies.genesis-process]
path = "../genesis-process"
